--- a/AspAccesos/AspAccesos.csproj
+++ b/AspAccesos/AspAccesos.csproj
@@ -221,6 +221,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccesosContext.cs" />
+    <Compile Include="Models\ModelView\RegistersView.cs" />
     <Compile Include="Models\TEstado.cs" />
     <Compile Include="Models\TUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -265,7 +266,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\ModelView\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
