--- a/AspAccesos/AspAccesos.csproj
+++ b/AspAccesos/AspAccesos.csproj
@@ -221,6 +221,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccesosContext.cs" />
+    <Compile Include="Models\ModelHtmlView\AgregarRegistroView.cs" />
     <Compile Include="Models\ModelView\RegistersView.cs" />
     <Compile Include="Models\TEstado.cs" />
     <Compile Include="Models\TUsuarios.cs" />
@@ -263,6 +264,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Registros\Index.cshtml" />
+    <Content Include="Views\Registros\Agregar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
