nuevo modelo html editar

--- a/AspAccesos/AspAccesos.csproj
+++ b/AspAccesos/AspAccesos.csproj
@@ -222,6 +222,7 @@
     </Compile>
     <Compile Include="Models\AccesosContext.cs" />
     <Compile Include="Models\ModelHtmlView\AgregarRegistroView.cs" />
+    <Compile Include="Models\ModelHtmlView\EditarRegistroView.cs" />
     <Compile Include="Models\ModelView\RegistersView.cs" />
     <Compile Include="Models\TEstado.cs" />
     <Compile Include="Models\TUsuarios.cs" />
@@ -265,6 +266,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Registros\Index.cshtml" />
     <Content Include="Views\Registros\Agregar.cshtml" />
+    <Content Include="Views\Registros\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
